--- a/www/templates/galary.html
+++ b/www/templates/galary.html
@@ -1,3 +1,13 @@
 <ion-view title="Galary" id="page7">
-  <ion-content padding="true" class="has-header"></ion-content>
+  <ion-content padding="true" class="has-header"  ng-init="loadImages()">
+    <div class="row" ng-repeat="image in images" ng-if="$index % 2 === 0">
+        <div class="col col-50" ng-if="$index < images.length">
+            <img ng-src="{{images[$index].src}}" width="100%" />
+        </div>
+        <div class="col col-50" ng-if="$index + 1 < images.length">
+            <img ng-src="{{images[$index + 1].src}}" width="100%" />
+        </div>
+    </div>
+
+  </ion-content>
 </ion-view>
