--- a/www/templates/signUpFac.html
+++ b/www/templates/signUpFac.html
@@ -1,37 +1,37 @@
-<ion-view title="Signup" id="page5">
-  <ion-content padding="true" class="has-header"> 
-    <form id="signup-form2" class="list" ng-submit="StudentCreate(Student)">
+<ion-view title="Signup" id="page9">
+  <ion-content padding="true" class="has-header">
+    <form id="signup-form2" class="list">
       <ion-list id="signup-list3">
         <label class="item item-input" id="signup-input3">
           <span class="input-label">Name</span>
-          <input type="text" placeholder="" ng-model="Student.StudentName" required>
+          <input type="text" placeholder="">
         </label>
         <label class="item item-input" id="signup-input4">
           <span class="input-label">Username</span>
-          <input type="text" placeholder="" ng-model="Student.StuuserName" required>
+          <input type="text" placeholder="">
         </label>
         <label class="item item-input" id="signup-input5">
           <span class="input-label">Password</span>
-          <input type="text" placeholder="" ng-model="Student.password" required>
+          <input type="text" placeholder="">
         </label>
         <label class="item item-input" id="signup-input6">
           <span class="input-label">Mobile No</span>
-          <input type="number" placeholder="" ng-model="Student.MobileNo" required>
+          <input type="text" placeholder="">
         </label>
         <label class="item item-input" id="signup-input7">
           <span class="input-label">Email</span>
-          <input type="email" placeholder="" ng-model="Student.Email" required>
+          <input type="text" placeholder="">
         </label>
         <label class="item item-input" id="signup-input8">
           <span class="input-label">USN</span>
-          <input type="text" placeholder="" ng-model="Student.StudentUSN" required>
+          <input type="text" placeholder="">
         </label>
 <div class="list">
 <label class="item item-input item-select">
     <div class="input-label">
       Branch
     </div>
-    <select ng-model="Student.branch" required>
+    <select>
       <option>EC</option>
       <option selected>EEE</option>
       <option>CS</option>
@@ -44,7 +44,7 @@
     <div class="input-label">
       Semester
     </div>
-    <select ng-model="Student.Sem">
+    <select>
       <option>1</option>
       <option selected>2</option>
       <option>3</option>
@@ -63,7 +63,7 @@
 			My Images
 	</div>
       </ion-list>
-      <button id="signup-button3" class="button button-stable  button-block" type="submit">Sign up</button>
+      <button id="signup-button3" class="button button-stable  button-block">Sign up</button>
     </form>
   </ion-content>
 </ion-view>
