--- a/www/templates/exam.html
+++ b/www/templates/exam.html
@@ -1,4 +1,4 @@
-<ion-view title="Training &amp; Placement" id="page6">
+<ion-view title="Exam details" id="page6">
   <ion-content padding="true" class="has-header"  ng-init="loadImages()">
     <div class="row" ng-repeat="image in images" ng-if="$index % 2 === 0">
         <div class="col col-50" ng-if="$index < images.length">
