--- a/www/templates/galary.html
+++ b/www/templates/galary.html
@@ -1,4 +1,4 @@
-<ion-view title="Galary" id="page7">
+<ion-view title="Gallary" id="page7">
   <ion-content padding="true" class="has-header"  ng-init="loadImages()">
     <div class="row" ng-repeat="image in images" ng-if="$index % 2 === 0">
         <div class="col col-50" ng-if="$index < images.length">
