--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,55 +1,21 @@
 <ion-view title="Home" id="page1">
   <ion-content padding="true" class="has-header">
-<div class ="row">
-        <div class="col">
-          <button class="button button-stable button-clear eag-home-button">
-            <img src="img/contact.png" style="width: 50%; height: 50%">
-            <p class="eag-home-label">Approved</p>
-          </button>
-        </div>
-        <div class="col">
-          <button class="button button-stable button-clear eag-home-button">
-            <img src="img/contact.png" style="width: 50%; height: 50%">
-          <p class="eag-home-label">Approved</p>
-          </button>
+<div id="profile-bg"></div>
+      <div id="content">
+        <div class="row" >
+        <div id="profile-info">
           
+          <img id="profile-image" src="img/collegelogo.png">
+          <h3 id="profile-name">Dr. AIT</h3>
+          <span id="profile-description">Welcome to Dr. Ambedkar Institute of Technology</span>
         </div>
-          
         </div>
-<div class="spacer" style="height: 15%"></div>
-        <div class ="row">
-        <div class="col">
-          <button class="button button-stable button-clear eag-home-button">
-            <img src="img/contact.png" style="width: 50%; height: 50%">
-            <p class="eag-home-label">Approved</p>
-          </button>
-        </div>
-        <div class="col">
-          <button class="button button-stable button-clear eag-home-button">
-            <img src="img/contact.png" style="width: 50%; height: 50%">
-          <p class="eag-home-label">Approved</p>
-          </button>
-          
-        </div>
-          
-        </div>
-
-<div class="spacer" style="height: 15%"></div>
-        <div class ="row">
-        <div class="col">
-          <button class="button button-stable button-clear eag-home-button">
-            <img src="img/contact.png" style="width: 50%; height: 50%">
-            <p class="eag-home-label">Approved</p>
-          </button>
-        </div>
-        <div class="col">
-          <button class="button button-stable button-clear eag-home-button">
-            <img src="img/contact.png" style="width: 50%; height: 50%">
-          <p class="eag-home-label">Approved</p>
-          </button>
-          
-        </div>
-          
-        </div>
+        <div class="spacer" style="height: 30%"></div>
+        <div class="row" style="background-color: aqua">
+        <p style="text-align: justify">Dr. Ambedkar Institute of Technology managed by Panchajanya Vidyapeetha Welfare Trust is situated on the outer ring road, adjacent to Jnana Bharathi Campus of Bangalore University. As a Grant-in-aid Institution of Government of Karnataka, 95% of the seats are filled up purely on the basis of merit through Common Entrance Test (CET) cell.The Institution is accredited by National Board of Accreditation (NBA), New Delhi, International Accreditation Organization(IAO), Tata Consultancy Services(TCS) and ISO 9001:2008.
+        </p>
+      </div>
+       
+      </div>
   </ion-content>
 </ion-view>
