--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -4,11 +4,11 @@
       <ion-list id="signup-list3">
         <label class="item item-input" id="signup-input3">
           <span class="input-label">Name</span>
-          <input type="text" placeholder="" ng-model="Student.StudentName" required>
+          <input type="text" placeholder="" ng-model="Student.studentName" required>
         </label>
         <label class="item item-input" id="signup-input4">
           <span class="input-label">Username</span>
-          <input type="text" placeholder="" ng-model="Student.StuuserName" required>
+          <input type="text" placeholder="" ng-model="Student.stuuserName" required>
         </label>
         <label class="item item-input" id="signup-input5">
           <span class="input-label">Password</span>
@@ -16,15 +16,15 @@
         </label>
         <label class="item item-input" id="signup-input6">
           <span class="input-label">Mobile No</span>
-          <input type="number" placeholder="" ng-model="Student.MobileNo" required>
+          <input type="number" placeholder="" ng-model="Student.mobileNo" required>
         </label>
         <label class="item item-input" id="signup-input7">
           <span class="input-label">Email</span>
-          <input type="email" placeholder="" ng-model="Student.Email" required>
+          <input type="email" placeholder="" ng-model="Student.email" required>
         </label>
         <label class="item item-input" id="signup-input8">
           <span class="input-label">USN</span>
-          <input type="text" placeholder="" ng-model="Student.StudentUSN" required>
+          <input type="text" placeholder="" ng-model="Student.studentUSN" required>
         </label>
 <div class="list">
 <label class="item item-input item-select">
@@ -32,9 +32,12 @@
       Branch
     </div>
     <select ng-model="Student.branch" required>
-      <option>EC</option>
-      <option selected>EEE</option>
-      <option>CS</option>
+      <option>ECE</option>
+      <option>EEE</option>
+      <option>ISE</option>
+      <option>TC</option>
+      <option>MECH</option>
+      <option>CSE</option>
     </select>
   </label>
 </div>
@@ -44,7 +47,7 @@
     <div class="input-label">
       Semester
     </div>
-    <select ng-model="Student.Sem">
+    <select ng-model="Student.sem">
       <option>1</option>
       <option selected>2</option>
       <option>3</option>
