--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,5 +1,5 @@
 <ion-view title="Login" id="page4">
-  <ion-content padding="true" class="has-header">
+  <ion-content padding="true" class="has-header" ng-init="who()">
     <form id="login-form1" class="list" ng-submit="Login(User)">
       <div class="bar bar-header bar-light">
         <h1 class="title">Welcome to Dr. AIT</h1>
