--- a/www/templates/StudentHome.html
+++ b/www/templates/StudentHome.html
@@ -44,7 +44,7 @@
         </div>
         <div class="col">
           <button class="button button-stable button-clear eag-home-button">
-            <img src="img/contact.png" style="width: 100%; height: 50%">
+            <img src="img/result.png" style="width: 100%; height: 50%">
           
           </button>
           
