--- a/www/templates/contact.html
+++ b/www/templates/contact.html
@@ -1,3 +1,26 @@
 <ion-view title="Contact" id="page8">
-  <ion-content padding="true" class="has-header"></ion-content>
+  <ion-content padding="true" class="has-header" style="background-image: url('img/b1.jpg')"  >
+<article class="Typography">
+  <div class="Content-header">
+    <h2>Contact Us</h2>
+    <p>Address
+Managing Trustee,Panchajanya Vidya Peetha Welfare Trust (R),
+Dr. Ambedkar Institute Of Technology Campus, BDA Outer Ring Road,
+Bangalore 560 056.
+</p>
+<p> <strong>Email<br>contact@pvpwt.org</strong></p>
+<p> <strong>Phone<br>+91-80-23211505/506/507</strong></p>
+<p> <strong>Fax<br>+91-80-23217789</strong></p>
+       
+<p> <strong> Monday – Friday <br>
+09:00 AM – 5:00 PM</strong></p>
+
+<p> <strong> Saturday<br>
+09:00 AM – 1:00 PM</strong></p>
+
+<p> <strong> Sunday<br>
+Closed</strong></p>
+</div> 
+</article>  
+</ion-content>
 </ion-view>
