--- a/www/templates/department.html
+++ b/www/templates/department.html
@@ -1,3 +1,27 @@
 <ion-view title="Department" id="page2">
-  <ion-content padding="true" class="has-header"></ion-content>
+  <ion-content padding="true" class="has-header">
+    <div>
+      <h3>List of Departments in Dr.AIT</h3>
+    </div>
+  <div class="list">
+    <div class="item item-divider">
+       UG Departments
+       <div class="item" id='dept' onclick="show('Mechanical Engineering');">Mechanical Engineering</div>
+       <div class="item" id='dept' onclick="alert('Electronics and Instrumentation Technology');">Electronics and Instrumentation Technology</div>
+       <div class="item" id='dept' onclick="alert('Electronics and Communication Engineering');">Electronics and Communication Engineering</div>
+       <div class="item" id='dept' onclick="alert('Electricals and Electronics Engineering (Accredited by National Board of Accreditation)');">Electricals and Electronics Engineering (Accredited by National Board of Accreditation)</div>
+       <div class="item" id='dept' onclick="alert('Industrial Engineering and Management(Accredited by National Board of Accreditation)');">Industrial Engineering and Management(Accredited by National Board of Accreditation)</div>
+       <div class="item" id='dept' onclick="alert('Telecommunication Engineering (Accredited by National Board of Accreditation)');">Telecommunication Engineering (Accredited by National Board of Accreditation)</div>
+       <div class="item" id='dept' onclick="alert('Information Science and Engineering (Accredited by National Board of Accreditation)');">Information Science and Engineering (Accredited by National Board of Accreditation)</div>
+       <div class="item" id='dept' onclick="alert('Computer Science and Engineering');">Computer Science and Engineering</div>
+       <div class="item" id='dept' onclick="alert('Medical Electronics');">Medical Electronics</div>
+       <div class="item" id='dept' onclick="alert('Civil Engineering');">Civil Engineering</div>
+     </div>
+     <div class="item item-divider">
+        PG Departments
+        <div class="item">Department of MBA</div>
+        <div class="item">Department of MCA</div>
+    </div>
+  </div>
+  </ion-content>
 </ion-view>
