--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,5 +1,5 @@
-<ion-view title="Home" id="page1">
-  <ion-content padding="true" class="has-header">
+<ion-view title="Home" id="page1" scr>
+  <ion-content padding="true" class="has-header " style="background-image: url('img/b3.jpg')" >
 <div id="profile-bg"></div>
       <div id="content">
         <div class="row" >
@@ -11,7 +11,7 @@
         </div>
         </div>
         <div class="spacer" style="height: 30%"></div>
-        <div class="row" style="background-color: aqua">
+        <div class="row" >
         <p style="text-align: justify">Dr. Ambedkar Institute of Technology managed by Panchajanya Vidyapeetha Welfare Trust is situated on the outer ring road, adjacent to Jnana Bharathi Campus of Bangalore University. As a Grant-in-aid Institution of Government of Karnataka, 95% of the seats are filled up purely on the basis of merit through Common Entrance Test (CET) cell.The Institution is accredited by National Board of Accreditation (NBA), New Delhi, International Accreditation Organization(IAO), Tata Consultancy Services(TCS) and ISO 9001:2008.
         </p>
       </div>
