--- a/www/templates/exam.html
+++ b/www/templates/exam.html
@@ -1,13 +1,12 @@
 <ion-view title="Exam details" id="page6">
   <ion-content padding="true" class="has-header"  ng-init="loadImages()">
-    <div class="row" ng-repeat="image in images" ng-if="$index % 2 === 0">
+     <div class="row" ng-repeat="image in images" ng-if="$index % 2 === 0">
         <div class="col col-50" ng-if="$index < images.length">
-            <img ng-src="{{images[$index].src}}" width="100%" />
+            <a href="#/full/{{images[$index].id}}"><img ng-src="{{images[$index].src}}" width="100%" /></a>
         </div>
         <div class="col col-50" ng-if="$index + 1 < images.length">
-            <img ng-src="{{images[$index + 1].src}}" width="100%" />
+            <a href="#/full/{{images[$index +1].id}}"><img ng-src="{{images[$index + 1].src}}" width="100%" /></a>
         </div>
     </div>
-
   </ion-content>
 </ion-view>
