--- a/www/templates/facility.html
+++ b/www/templates/facility.html
@@ -1,3 +1,171 @@
 <ion-view title="Facility" id="page3">
-  <ion-content padding="true" class="has-header"></ion-content>
+  <ion-content padding="true" class="has-header">
+    
+			<div id="wrapper" class="fade-in">
+
+
+			<!-- Main -->
+					<div id="main">
+
+						<!-- Featured Post -->
+							<article class="post featured">
+								<header class="major">
+									<span class="date">I.Library</span>
+									<h2><a href="#"><!--[-->Five Laws of library<!--]--></a></h2>
+									<ul>
+										<li>Books are for use</li>
+										<li>Books are for use</li>
+										<li>Every reader has his/her book</li>
+									   <li>Every book has its reader</li>
+									   <li>Save the time of the reader</li>
+									   <li>Library is a growing organism</li>
+									 </ul>
+								</header>
+							</article>
+
+						<!-- Posts -->
+							<section class="posts">
+								<article>
+									<header>
+										<span class="date"></span>
+										<h2><a href="#">Mission</a></h2>
+									</header>
+									
+									<p>Library serve as a resource center and aims to develop a comprehensive collection of books and journals useful for     faculty and students of the institute and provides an efficient dissemination of knowledge.</p>
+									
+								</article>
+								
+								<article>
+									<header>
+										<span class="date"></span>
+										<h2><a href="#">Vision</a></h2>
+									</header>
+									<ul>
+									<li>Library aims to be one of the best among engineering college libraries in the country.</li>
+<li>Library intends to incorporate the latest technology and adopt user friendly approach towards student and faculty.</li>
+<li>Library intends to offer comprehensive services related to dissemination of knowledge.</li>
+						</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date"></span>
+										<h2><a href="#">Goals</a></h2>
+									</header>
+									<ul>
+									<li>To educate students to contribute as Dynamic engineers and Citizens through the innovation, Integration, Application       and transfer of Engineering knowledge.</li>
+   <li>To be recognized as a world class Engineering college Library that provides an excellent learning materials timely and     accurate information in various print and non print formats.</li>
+   <li>A knowledge doorway to accessing resources and life long learning center.</li>
+</ul>
+								</article>
+								
+								
+<article>
+									<header>
+										<span class="date">Hostel</span>
+										<h2><a href="#">Facilities</a></h2>
+									</header>		
+<ul>
+<li>Internet & Wi-Fi</li>
+<li>Hot water</li>
+<li>R.O. Drinking Water</li>
+<li>T.V Rooms</li>
+<li>Parking</li>
+<li>Washing  Machine</li>
+<li>Play Ground</li>
+<li>News paper Reading Rooms</li>
+<li>Hostel 1: Ananda Bhavan</li>
+<li>Hostel 2: Siddhartha Hostel</li>
+<li>Hostel 3: PG Block</li>
+<li>Hostel 4: SC/ST Block</li>
+</ul>
+<br />
+
+<ul>
+<li>Both south and north Indian food.</li>
+<li>Each floor has RO drinking water connection( 750 LPH Plant)</li>
+<li>24 Hour Solar hot water supply.</li>
+<li>A separate TV room, reading room and recreation room.</li>
+<li>20 MBPS Internet facility</li>
+<li>Uninterrupted power supply during power cuts through a separate generator.</li>
+<li>Parking facility is available</li>
+<li>24 hrs security through a private agency.</li>
+<li>Bio-gas Boiler Plant for Hot water</li>
+<li>CCTV surveillance</li>
+<li>Guest Rooms for visitors</li>
+</ul>
+<br />
+Ladies Hostel
+<br />
+Warden: Dr. Anuradha – Warden
+<br />
+Contact No: 9900904899
+<br />
+<p>The Girl’s hostel is situated within the campus. There are 48 rooms with common dining hall, TV hall, Gym hall and visitors room. The hostel students are provided with student friendly menu. It has 24 hours security with CCTV camera installed within the hostel. The hostel has been provided with gas geysers and solar water heater for the continual supply of hot water.
+</p>
+<p>The management has appointed a Warden with supporting staff (Residential) to take care of the day to day activities of the hostel. The hostel has in house Kitchen staff and has outsourced housekeeping work. Currently the total number of students residing in the hostel is 195. The management has taken up construction of additional rooms in order to meet the requirements of the student inflow and the same would be available soon.</p>
+
+</article>						
+<article>
+									<header>
+										<span class="date"></span>
+										<h2><a href="#">Sports and Gymnasium</a></h2>
+									</header>									
+
+
+<p>Dr. AIT supports a full-fledged infrastructure for indoor sports for multi gym, Shuttle badminton, Table tennis, carom and chess. And also houses sports ground to facilitate playing of Cricket, volley ball, basket ball, foot ball throw ball and kho-kho. The fitness centre at Dr. AIT Sports Complex equips the latest fitness equipment to the faculty and students.
+</p><p>
+The college has given all the facilities to the College team players to participate in any tournaments in India
+We provide T.A. and D.A. Colors and Entry fee for players to take part in the Tournaments. The players will be given attendance and Grace marks for those who achieve medals in University, Inter university, National, and Inter national.
+</p>
+
+<h3>A) Out door</h3>
+<ul>
+<li>200Mtrs. Athletic Ground</li>
+<li>Cricket ground (60 Yards)</li>
+<li>Throw Ball</li>
+<li>Foot Ball</li>
+<li>Basket Ball court</li>
+<li>Volley Ball</li>
+<li>kabbadi</li>
+</ul>
+
+<h3>B) Indoor</h3>
+<ul>
+
+<li>Gymnasium</li>
+<li>Shuttle Badminton</li>
+<li>Carom</li>
+<li>Table tennis</li>
+</ul>
+<br />
+</article>
+
+<article>
+									<header>
+										<h2><a href="#">Objective</a></h2>
+									</header>									
+
+
+<p>The Sports Department of Dr. AIT has been dedicated to improve the sportsmanship and aslo emphasizes on the importantance of teamwork in the field.
+On Vision in to be recognise the true sports man.
+On Mission is to develop the fitness and leadership for sports man.
+</p>
+
+<br />Profile of physical Director
+<br />
+<br />Name: Shiva kumar K.J
+<br />Father’s Name: K. junjappa
+<br />Date of birth: 01-08-1960
+<br />Educational Qualification: B.com, M.P.Ed,
+<br />Date of join to the College: 23-08-1989
+<br />Designation: Physical Education Director.
+<br />V.T.U. work assignment: The V.T.U. is nominated me as a selection committee member for V.T.U.Net ball team
+<br />selection and Body building weight lifting competition for the year 2012-13  
+							</article>
+							</section>
+				</div>
+ 
+			</div>
+
+  </ion-content>
 </ion-view>
