--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -25,7 +25,7 @@
         <ion-item id="profile" ui-sref="menu.profile" menu-close="" ng-if="show" >Myprofile</ion-item>
         <ion-item id="menu-list-item3" ui-sref="menu.department" menu-close="">Department</ion-item>
         <ion-item id="menu-list-item7" ui-sref="menu.facility" menu-close="">Facility</ion-item>
-        <ion-item id="menu-list-item5" ui-sref="menu.trainingPlacement" menu-close="" ng-if="show">Training &amp; Placement</ion-item>
+        <ion-item id="menu-list-item5" ui-sref="menu.trainingPlacementMenu" menu-close="">Training &amp; Placement</ion-item>
         <ion-item id="menu-list-item4" ui-sref="menu.galary" menu-close="">Gallary</ion-item>
         <ion-item id="menu-list-item6" ui-sref="menu.contact" menu-close="">Contact</ion-item>
          <ion-item id="menu-list-item6" ui-sref="menu.logout" ng-show="isUserLoggedIn"> Logout </ion-item>
