--- a/www/templates/StudentHome.html
+++ b/www/templates/StudentHome.html
@@ -43,7 +43,7 @@
           </button>
         </div>
         <div class="col">
-          <button class="button button-stable button-clear eag-home-button">
+          <button class="button button-stable button-clear eag-home-button" ng-click="myResult()">
             <img src="img/result.png" style="width: 100%; height: 50%">
           
           </button>
