--- a/www/templates/facultyHome.html
+++ b/www/templates/facultyHome.html
@@ -12,7 +12,7 @@
 <div class="spacer" style="height: 25%"></div>
         <div class ="row">
         <div class="col">
-          <button class="button button-stable button-clear eag-home-button" ng-click="exams()">
+          <button class="button button-stable button-clear eag-home-button" ng-click="getfac()">
             <img src="img/fac.png" style="width: 50%; height: 50%">
             
           </button>
