--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -23,6 +23,7 @@
         <ion-item id="menu-list-item1" ui-sref="menu.home" menu-close="">Home</ion-item>
         <ion-item id="menu-list-item2" ui-sref="menu.login"  ng-show="!isUserLoggedIn" menu-close="">Login</ion-item>
         <ion-item id="profile" ui-sref="menu.profile" menu-close="" ng-if="show" >Myprofile</ion-item>
+        <ion-item id="profile" ui-sref="menu.FacHome" menu-close="" ng-if="show" >Faculty</ion-item>
         <ion-item id="menu-list-item3" ui-sref="menu.department" menu-close="">Department</ion-item>
         <ion-item id="menu-list-item7" ui-sref="menu.facility" menu-close="">Facility</ion-item>
         <ion-item id="menu-list-item5" ui-sref="menu.trainingPlacementMenu" menu-close="">Training &amp; Placement</ion-item>
